Assignments/Assignment3/Slurm/slurm-3802.out
Error -11: clBuildProgram
1 Platforms found
1 Devices found
Max workgroup size is 1024
<kernel>:7:20: error: expression is not assignable
         if (i % 2 = 0) { 
             ~~~~~ ^
<kernel>:9:25: error: expected ')'
                if (i+1 !> size){ 
                        ^
<kernel>:9:20: note: to match this '('
                if (i+1 !> size){ 
                   ^
<kernel>:19:19: error: expression is not assignable
        if (i % 2 = 1){
            ~~~~~ ^
<kernel>:21:25: error: expected ')'
                if (i+1 !> size){ 
                        ^
<kernel>:21:20: note: to match this '('
                if (i+1 !> size){ 
                   ^


real	0m1.997s
user	0m0.032s
sys	0m0.752s
